--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
     font-family: 'Arial', 'Verdana';
     background-color: #000000;
     color: #FFFFFF;
-    margin: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
     margin-bottom: 0px;
 }
 
@@ -77,7 +79,7 @@ div {
 }
 
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-width: 2px 5px 0 0;
